--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,8 @@
 		// "noUnusedLocals": true,
 		// "noUnusedParameters": true,
 		"useUnknownInCatchVariables": false,
+		module: "CommonJS",
+		moduleResolution: "Node"
 
 	},
 	"include": [
